--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3.2.3",
     "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
