--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -17,16 +17,18 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@maany_shr/e-class-translations": "workspace:*",
     "@maany_shr/e-class-models": "workspace:*",
+    "@maany_shr/e-class-translations": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
     "react": "19.0.0",
     "react-dropzone": "^14.3.5",
     "tailwind-merge": "^2.5.5",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "zod": "^3.24.1"
   },
   "publishConfig": {
     "access": "public"
