--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,7 +11,8 @@
     }
   },
   "dependencies": {
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@maany_shr/e-class-models": "1.4.2"
   },
   "publishConfig": {
     "access": "public"
