--- a/packages/auth/tsconfig.lib.json
+++ b/packages/auth/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "./out-tsc/lib",
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": true,
     "declaration": true,
@@ -11,6 +11,7 @@
       "vite/client"
     ]
   },
+  "skipLibCheck": true,
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "vite.config.ts"],
   "references": [
