--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,18 +1,10 @@
 {
   "name": "@dad-e-class/auth",
   "version": "0.0.1",
-  "dependencies": {
-    "@maany_shr/e-class-models": "workspace:*"
-  },
   "type": "module",
-  "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
+  "main": "./index.js",
+  "typings": "./index.d.ts",
   "private": true,
-  "nx": {
-    "sourceRoot": "packages/auth/src",
-    "projectType": "library",
-    "name": "auth"
-  },
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -21,6 +13,8 @@
       "default": "./dist/index.js"
     }
   },
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.mjs"
+  "types": "./index.d.ts",
+  "dependencies": {
+    "@maany_shr/e-class-models": "workspace:*"
+  }
 }
