--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@maany_shr/e-class-models",
   "version": "1.4.2",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./index.js",
-      "require": "./index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     }
   },
   "dependencies": {
