--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@maany_shr/e-class-ui-kit",
   "version": "1.4.2",
-  "main": "./index.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
