--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,7 +15,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "zod": "^3.24.1",
-    "@maany_shr/e-class-models": "1.5.0"
+    "@maany_shr/e-class-models": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
