--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ out
 vite.config.*.timestamp*
 
 storybook-static
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
