--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -13,7 +13,15 @@
     "src/**/*.spec.js",
     "src/**/*.test.ts",
     "src/**/*.test.js",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
   ],
   "exclude": ["node_modules", "dist", "eslint.config.js"],
+  "references": [
+    {
+      "path": "../../packages/models"
+    },
+    {
+      "path": "../../packages/auth"
+    }
+  ]
 }
