--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -16,7 +16,10 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ],
   },
   "include": [
     "**/*.ts",
@@ -30,8 +33,13 @@
     ".next/types/**/*.ts",
     "postcss.config.mjs",
     "eslint.config.mjs"
+, "src/auth/config.ts", "../../packages/auth/src/infrastructure/gateway/next-auth-gateway.ts"  ],
+  "exclude": [
+    "node_modules",
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "references": [
     {
       "path": "../../packages/models"
