--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,6 +15,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "zod": "^3.24.1",
+    "next-auth": "5.0.0-beta.25",
     "@maany_shr/e-class-models": "workspace:*"
   },
   "publishConfig": {
