--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,8 +2,8 @@
   "name": "@maany_shr/e-class-auth",
   "version": "1.6.0",
   "type": "module",
-  "main": "./index.js",
-  "typings": "./index.d.ts",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -12,7 +12,7 @@
       "default": "./dist/index.js"
     }
   },
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "zod": "^3.24.1",
     "next-auth": "5.0.0-beta.25",
