refactor(platform): implement runtime environment variables with Next.js 15 dynamic rendering
The platform was rebuilding completely on every container startup, taking 2-3 minutes
and consuming excessive cluster resources. This was caused by running `pnpm nx start platform`
at container startup, which required building all dependencies (translations, models, auth)
plus the Next.js app to access runtime environment variables from Kubernetes secrets.

Implemented Next.js 15's dynamic rendering with the `connection()` API to enable runtime
environment variable reading. This allows a single pre-built Docker image to work across
all environments (dev, staging, production) with different configurations.

- **env.ts as single source of truth**: Updated environment validation to use placeholder
  values during build time and strict validation at runtime
- **Dynamic rendering**: Server components call `connection()` to opt into dynamic rendering,
  causing env.ts to be evaluated at request time instead of build time
- **Runtime config context**: Created React context to provide runtime configuration to
  client components

- **Pre-build during image creation**: Modified Dockerfile to run `pnpm nx build platform`
  during Docker build instead of at container startup
- **PM2 configuration**: Changed ecosystem.config.js.j2 to use `next start` instead of
  `pnpm nx start platform`
- **Environment isolation**: Added .env* files to .dockerignore to prevent build-time
  inlining of environment variables

- `.dockerignore`: Added .env* patterns to prevent env files from being copied into image
- `apps/platform/Dockerfile`: Added build step during Docker image creation
- `apps/platform/config/ecosystem.config.js.j2`: Fixed hardcoded values, changed to Jinja2
  template variables for runtime injection
- `apps/platform/src/lib/infrastructure/server/config/env.ts`: Added build-time placeholder
  logic and runtime validation
- `apps/platform/src/app/[locale]/(wired-pages)/layout.tsx`: Ca

--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -39,6 +39,10 @@ RUN pnpm install --frozen-lockfile
 RUN jq '.plugins = [.plugins[] | select(.plugin != "@nx/eslint/plugin")]' nx.json > nx.tmp.json && \
     mv nx.tmp.json nx.json
 
+# Build the CMS app during Docker image creation
+# This improves startup time from ~2-3 minutes to ~1 second
+RUN pnpm nx build cms
+
 EXPOSE 443
 EXPOSE 80
 EXPOSE 3000
