--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -12,6 +12,7 @@ AUTH_ENABLE_TEST_ACCOUNTS="true"
 
 # Platform Configuration
 E_CLASS_DEV_MODE="true"
+DEFAULT_THEME="just-do-ad"
 
 # Public Environment Variables (client-side accessible)
 NEXT_PUBLIC_E_CLASS_RUNTIME="eclass-dev"
