--- a/apps/cms/.env.local.template
+++ b/apps/cms/.env.local.template
@@ -21,7 +21,7 @@ NEXT_PUBLIC_APP_URL="https://localhost:3000"
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
 E_CLASS_CMS_REST_URL="http://localhost:5173"
 NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
-NEXT_PUBLIC_CMS_BACKGROUND_IMAGE_URL="https://example.com/background.jpg"
+# NEXT_PUBLIC_CMS_BACKGROUND_IMAGE_URL="https://example.com/background.jpg"
 
 # S3/Storage Configuration
 S3_HOSTNAME="localhost"
