--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
     "spark-md5": "^3.0.2",
-    "superjson": "^2.2.2",
+    "superjson": "2.2.2",
     "tailwindcss": "4.0.0-beta.8",
     "zod": "^3.24.1"
   },
@@ -50,11 +50,11 @@
     "@nx/jest": "20.1.4",
     "@nx/js": "20.1.4",
     "@nx/next": "20.1.4",
-    "@nx/playwright": "^20.1.4",
+    "@nx/playwright": "20.1.4",
     "@nx/plugin": "20.1.4",
     "@nx/react": "20.1.4",
-    "@nx/storybook": "^20.1.4",
-    "@nx/vite": "^20.1.4",
+    "@nx/storybook": "20.1.4",
+    "@nx/vite": "20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.49.0",
