--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-intl": "^3.26.3",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
