--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -17,7 +17,9 @@
     "@maany_shr/e-class-models": "workspace:*",
     "@trpc/client": "^11.1.2",
     "@dream-aim-deliver/e-class-cms-rest": "2.11.0",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "next": "15.1.3",
+    "react": "19.0.0"
   },
   "publishConfig": {
     "access": "public"
