--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@dream-aim-deliver/dad-cats": "^0.13.0",
     "@dream-aim-deliver/e-class-cms-rest": "3.0.2",
-    "@mux/mux-player-react": "^3.3.0",
+    "@mux/mux-player-react": "3.3.0",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
